--- a/Task 1.html
+++ b/Task 1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>     
     <head> 
-        <title>Some frames</title> 
+        <title>Frame Question-1</title> 
 
     </head>      
     <frameset cols = "30%, 70%"> 
